--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -599,7 +599,7 @@ progress {
   width: 100%;
   padding-right: var(--bs-gutter-x, 0.75rem);
   padding-left: var(--bs-gutter-x, 0.75rem);
-  /*margin-right: auto;
+  margin-right: auto;
   margin-left: auto;
 }
 
