--- a/css/styles.css
+++ b/css/styles.css
@@ -17,25 +17,28 @@ h1{
     color: rgb(0, 214, 214, 1);
     font-family: 'Bungee', cursive;
     font-weight: bolder;
-    font-size: 6rem;
+    font-size: 5rem;
     font-style: italic;
-    text-align:justify;
+    text-align:center;
+}
+
+.H1{
+    display: flex;
+    text-align: center;
+    justify-content: center;
 }
 
 
-.headerBt{
-
-}
 .elHeaderBox{
     background-color: rgb(63, 17, 105);
     text-decoration: none;
     font-family: 'Kanit', sans-serif;
     font-weight: bold;
-    font-size: 30rem;
+    font-size: 50rem;
     position: sticky;
     top: 0px;
     z-index: 10;
-    height: 150px;
+    height: 110px;
     box-sizing: border-box;
     width: 100%;
 }
@@ -49,13 +52,13 @@ h1{
     flex-direction: row;
     text-align: justify;
     justify-content: center;
-}*
+}
 
 .botonNav{
     background-color: rgb(113, 25, 196);
     color: rgb(0, 214, 214, 1);
     padding: 16px;
-    font-size: 20px;
+    font-size: 100px;
     border: none;
     border-radius: 16px;
     cursor: pointer;
@@ -81,7 +84,7 @@ h1{
     z-index: 1;
     font-family: 'Kanit', sans-serif;
     font-weight: bold;
-    font-size: 4rem;
+    font-size: 5rem;
 }
 
 nav div{
@@ -97,7 +100,7 @@ nav div{
 }
 
 .contenidoNav a:hover {
-    background-color: rgba(65, 2, 99, 0.9);
+    background-color: rgba(233, 217, 241, 0.9);
 }
 
 .desplegarNav:hover .contenidoNav{
@@ -107,15 +110,13 @@ nav div{
 .desplegarNav:hover .botonNav{
     background-color: rgb(94, 61, 124);
 }
-*/
+
 .elLogo{
     box-sizing: border-box;
     text-align: right;
     width: 120px;
     height: 120px;
-    position: absolute;
-    top: 7.5px;
-    left: 1700px;
+    position: relative;
     transform: translate(15px,15px);
     transition: 1s;
     cursor: pointer;
@@ -129,16 +130,18 @@ nav div{
 h2{
     color: rgb(0, 203, 203, 1);
     font-family: 'Kanit', sans-serif;
-    font-weight: 200;
-    font-size: 4rem;
+    font-weight:900c;
+    font-size: 5rem;
 }
+
+
 
 .subtitulos3{
     color: rgb(0, 203, 203, 1);
     text-decoration: underline;
     font-family: 'Kanit', sans-serif;
     font-weight: 200;
-    font-size: 3rem;
+    font-size: 3.5rem;
     margin-top: 100px;
 }
 
@@ -161,6 +164,15 @@ section div a{
     font-size: 2rem;    
 }
 
+.formulario{
+    color: rgb(0, 203, 203, 1);
+    text-decoration: underline;
+    font-family: 'Kanit', sans-serif;
+    font-weight: 200;
+    font-size: 2rem;
+    margin-top: 100px;
+}
+
 .linksExternos{
     color: rgb(187, 101, 230, 0.9);
     font-family: 'Kanit', sans-serif;
@@ -176,8 +188,14 @@ section div a{
     margin-top: 30px;
     border-radius: 10px;
     border: 0.5px solid black;
+    transition: 1s;
 
 }
+
+.boxImg:hover {
+    transform: translate(20px,10px) scale(1.2,1.2);
+}
+
 
 .boxSubtitulos{
     background-image: radial-gradient(circle, #4e057e, #520789, #570994, #5a0c9f, #5e0faa, #6213b3, #6716bc, #6b1ac5, #711fce, #7823d7, #7e28e0, #852ce9);
@@ -208,7 +226,17 @@ section div a{
     
 }
 
-
+/*.hijo{
+    /*border: 1px solid rgb(0, 214, 214, 1);
+    font-size: 2rem;
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
+    justify-content: center;
+    text-align: center;
+    flex-wrap: wrap;
+    justify-content: center;
+}*/
 
 .elFooter{
     background-color:  rgb(63, 17, 105);
@@ -227,12 +255,17 @@ footer ul li{
     width: 25px;
     height: 25px;
 }
-.absoluteFooter1{
-    position: absolute;
-    bottom: 0px;
-    left: 600px;
-    
-    
+ 
+.claseH2{
+    background-image: radial-gradient(circle, #350066, #3c0079, #43008e, #4900a2, #4e00b8, #5404c5, #5a08d2, #600de0, #6a16e8, #731def, #7d24f7, #862aff);
+    width:fit-content;
+    height: 40%;
+    margin-top: 6%;
+    margin-bottom: 3.5%;
+    margin-left: 1.5%;
+    padding: 10px;
+    border-radius: 25px;
+
 }
 
 
@@ -281,3 +314,4 @@ footer ul li{
     font-size: 2rem;
     
 }
+
