--- a/css/styles.css
+++ b/css/styles.css
@@ -57,8 +57,8 @@ h1{
 .botonNav{
     background-color: rgb(113, 25, 196);
     color: rgb(0, 214, 214, 1);
-    padding: 16px;
-    font-size: 100px;
+    padding: 10px;
+    font-size: 30px;
     border: none;
     border-radius: 16px;
     cursor: pointer;
@@ -116,12 +116,13 @@ nav div{
     text-align: right;
     width: 120px;
     height: 120px;
-    position: relative;
+    position: fixed;
+    margin-left: 40%;
     transform: translate(15px,15px);
     transition: 1s;
     cursor: pointer;
 }
-
+*/
 .elLogo:hover{
     transform: translate(20px,10px) scale(1.3,1.3);
 }
@@ -315,3 +316,55 @@ footer ul li{
     
 }
 
+@media (max-widht:320px){
+    .elLogo{
+        margin-left: 10%;
+        width: 50px;
+        height: 50px;
+        transform: translate(10px,10px);
+    }
+}
+
+@media (max-widht:480px){
+    .elLogo{
+        margin-left: 25%;
+        width: 80px;
+        height: 80px;
+        transform: translate(10px,10px);
+    }
+}
+
+@media (max-widht:768px){
+    .elLogo{
+        margin-left: 40%;
+        width: 80px;
+        height: 80px;
+        transform: translate(10px,10px);
+    }
+}
+
+
+@media (min-widht:769px){
+    .elLogo{
+        margin-left: 45%;
+        width: 80px;
+        height: 80px;
+        transform: translate(10px,10px);
+    }
+}
+/*
+.elLogo{
+    box-sizing: border-box;
+    text-align: right;
+    width: 120px;
+    height: 120px;
+    position: fixed;
+    margin-left: 40%;
+    transform: translate(15px,15px);
+    transition: 1s;
+    cursor: pointer;
+}
+
+.elLogo:hover{
+    transform: translate(20px,10px) scale(1.3,1.3);
+}
