--- a/css/styles.css
+++ b/css/styles.css
@@ -28,7 +28,7 @@ h1{
     justify-content: center;
 }
 
-
+/*SECCION HEADER*/
 .elHeaderBox{
     background-color: rgb(63, 17, 105);
     text-decoration: none;
@@ -122,12 +122,9 @@ nav div{
     transition: 1s;
     cursor: pointer;
 }
-*/
-.elLogo:hover{
-    transform: translate(20px,10px) scale(1.3,1.3);
-}
+/* FINAL SECCION HEADER*/
 
-
+/* INICIO DE SECCION DE TITULOS Y SUBS*/
 h2{
     color: rgb(0, 203, 203, 1);
     font-family: 'Kanit', sans-serif;
@@ -164,24 +161,11 @@ section div a{
     font-weight: 200;
     font-size: 2rem;    
 }
+/*FINAL SECCION TITULOS Y SUBS*/
 
-.formulario{
-    color: rgb(0, 203, 203, 1);
-    text-decoration: underline;
-    font-family: 'Kanit', sans-serif;
-    font-weight: 200;
-    font-size: 2rem;
-    margin-top: 100px;
-}
 
-.linksExternos{
-    color: rgb(187, 101, 230, 0.9);
-    font-family: 'Kanit', sans-serif;
-    font-weight: 200;
-    font-size: 2rem;
-    
-}
 
+/*MODELADO CON FLEX*/
 .boxImg{
     font-size: 1.5rem;
     width: 300px;
@@ -227,17 +211,7 @@ section div a{
     
 }
 
-/*.hijo{
-    /*border: 1px solid rgb(0, 214, 214, 1);
-    font-size: 2rem;
-    width: 100%;
-    height: 100%;
-    border-radius: 10px;
-    justify-content: center;
-    text-align: center;
-    flex-wrap: wrap;
-    justify-content: center;
-}*/
+
 
 .elFooter{
     background-color:  rgb(63, 17, 105);
@@ -270,20 +244,7 @@ footer ul li{
 }
 
 
-.flexFooter{
-    background-color: #2f0b4d;
-    width: 100%;
-    height: auto;
-    margin: 0px;
-    padding: 0px;
-    margin-top: 3%;
-    display: flex;
-    border: 0.5px solid rgb(150, 60, 223) ;
-    flex-direction: row;
-    text-align:justify;
-    justify-content:space-evenly;
 
-}
 
 .flexFooter2{
     background-color: #2f0b4d;
@@ -303,68 +264,20 @@ footer ul li{
     flex-wrap: wrap;
 
 }
-.imagenesVectorizadas{
-    width: 25px;
-    height: 25px;
+/*FORMULARIOS*/
+.formulario{
+    color: rgb(0, 203, 203, 1);
+    text-decoration: underline;
+    font-family: 'Kanit', sans-serif;
+    font-weight: 200;
+    font-size: 2rem;
+    margin-top: 100px;
 }
-
+/*SECCION LINKS*/
 .linksExternos{
     color: rgb(187, 101, 230, 0.9);
     font-family: 'Kanit', sans-serif;
     font-weight: 200;
     font-size: 2rem;
     
-}
-
-@media (max-widht:320px){
-    .elLogo{
-        margin-left: 10%;
-        width: 50px;
-        height: 50px;
-        transform: translate(10px,10px);
-    }
-}
-
-@media (max-widht:480px){
-    .elLogo{
-        margin-left: 25%;
-        width: 80px;
-        height: 80px;
-        transform: translate(10px,10px);
-    }
-}
-
-@media (max-widht:768px){
-    .elLogo{
-        margin-left: 40%;
-        width: 80px;
-        height: 80px;
-        transform: translate(10px,10px);
-    }
-}
-
-
-@media (min-widht:769px){
-    .elLogo{
-        margin-left: 45%;
-        width: 80px;
-        height: 80px;
-        transform: translate(10px,10px);
-    }
-}
-/*
-.elLogo{
-    box-sizing: border-box;
-    text-align: right;
-    width: 120px;
-    height: 120px;
-    position: fixed;
-    margin-left: 40%;
-    transform: translate(15px,15px);
-    transition: 1s;
-    cursor: pointer;
-}
-
-.elLogo:hover{
-    transform: translate(20px,10px) scale(1.3,1.3);
 }
