--- a/css/styles.css
+++ b/css/styles.css
@@ -10,55 +10,43 @@
 }
 
 body{
-    background-color: rgb(29, 1, 44, 0.9);
+    background-image: linear-gradient(to right bottom, #1d012c, #220637, #290842, #2f0b4d, #360d59, #3d0f65, #441172, #4b137f, #541590, #5e16a1, #6718b2, #7119c4);
 }
 
 h1{
     color: rgb(0, 214, 214, 1);
     font-family: 'Bungee', cursive;
     font-weight: bolder;
-    font-size: 6rem;
+    font-size: 5rem;
     font-style: italic;
-    text-align: center;
+    text-align:center;
 }
 
+.H1{
+    display: flex;
+    text-align: center;
+    justify-content: center;
+}
+
+/*SECCION HEADER*/
 .elHeaderBox{
     background-color: rgb(63, 17, 105);
     text-decoration: none;
     font-family: 'Kanit', sans-serif;
     font-weight: bold;
-    font-size: 13rem;
+    font-size: 45rem;
     position: sticky;
     top: 0px;
     z-index: 10;
-    height: 150px;
+    height: 110px;
     box-sizing: border-box;
     width: 100%;
+    border: 0.5px solid rgb(150, 60, 223);
+    text-align: center;
 }
 
-.botonNav{
-    background-color: rgb(113, 25, 196);
-    color: rgb(0, 214, 214, 1);
-    padding: 16px;
-    font-size: 20px;
-    border: none;
-    border-radius: 16px;
-    cursor: pointer;
-    position: fixed;
-    top: 50px;
-    left: 30px;
-}
-
-.desplegarNav{
-    position: fixed;
-    display: inline-block;
-    top: 105px;
-    left: 30px;
-}
-
-.contenidoNav{
-    display: none;
-    position: relative;
+.navColor{
+    color:rgba(0, 214, 214, 1) ;
     background-color:rgb(94, 61, 124) ;
     min-width: 160px;
     border: 0.5px solid rgb(0, 203, 203, 1);
@@ -66,57 +54,55 @@ h1{
     z-index: 1;
     font-family: 'Kanit', sans-serif;
     font-weight: bold;
-    font-size: 4rem;
+    font-size: 3rem;
+    border-radius: 25px;
 }
+
+.navbar-toggler2 {
+    padding: 1rem 0.75rem;
+    font-size: 2rem;
+    line-height: 1;
+    background-color: rgb(148, 0, 185);
+    border: 1px solid rgb(148, 9, 190);
+    border-radius: 0.25rem;
+    transition: box-shadow 0.15s ease-in-out;
+  }
+
+ 
 
 nav div{
     list-style-type: none;
 }
 
-.contenidoNav a{
-    color: rgb(0, 214, 214, 1);
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-    border-radius: 16px;
-}
-
-.contenidoNav a:hover {
-    background-color: rgba(65, 2, 99, 0.9);
-}
-
-.desplegarNav:hover .contenidoNav{
-    display: block;
-}
-
-.desplegarNav:hover .botonNav{
-    background-color: rgb(94, 61, 124);
-}
-
 .elLogo{
     box-sizing: border-box;
     text-align: right;
-    width: 125px;
-    height: 125px;
-    position: absolute;
-    top: 20px;
-    left: 1700px;
+    width: 120px;
+    height: 120px;
+    position: fixed;
+    margin-left: 40%;
+    transform: translate(15px,15px);
+    transition: 1s;
+    cursor: pointer;
 }
+/* FINAL SECCION HEADER*/
 
-
+/* INICIO DE SECCION DE TITULOS Y SUBS*/
 h2{
     color: rgb(0, 203, 203, 1);
     font-family: 'Kanit', sans-serif;
-    font-weight: 200;
-    font-size: 4rem;
+    font-weight:900c;
+    font-size: 5rem;
 }
 
+
+
 .subtitulos3{
-    color: rgb(0, 203, 203, 1);
+    color: rgba(0, 203, 203, 1);
     text-decoration: underline;
     font-family: 'Kanit', sans-serif;
     font-weight: 200;
-    font-size: 3rem;
+    font-size: 3.5rem;
     margin-top: 100px;
 }
 
@@ -138,68 +124,72 @@ section div a{
     font-weight: 200;
     font-size: 2rem;    
 }
+/*FINAL SECCION TITULOS Y SUBS*/
 
-.linksExternos{
-    color: rgb(187, 101, 230, 0.9);
-    font-family: 'Kanit', sans-serif;
-    font-weight: 200;
-    font-size: 2rem;
-    
-}
 
+
+/*MODELADO CON FLEX*/
 .boxImg{
     font-size: 1.5rem;
-    width: 300px;
+    width: 290px;
     height: 200px;
     margin-top: 30px;
     border-radius: 10px;
     border: 0.5px solid black;
+    transition: 1s;
 
 }
 
-.absoluteIbai{
-    position: absolute;
-    left: 600px;
-    top: 290px;
+.boxImg:hover {
+    transform: translate(20px,10px) scale(1.2,1.2);
 }
 
-.absoluteLuquita{
-    position: absolute;
-    left:1200px ;
-    top:290px ;
+section div div a:hover{
+    color:  rgba(0, 203, 203, 1);
 }
 
-.absoluteAuriculares{
-    position: absolute;
-    left:620px ;
-    top:945px ;
-}
-.absoluteMonitor{
-    position: absolute;
-    left: 1240px;
-    top: 945px;
+.boxSubtitulos{
+    background-image: radial-gradient(circle, #4e057e, #520789, #570994, #5a0c9f, #5e0faa, #6213b3, #6716bc, #6b1ac5, #711fce, #7823d7, #7e28e0, #852ce9);
+    width:fit-content;
+    height: 40%;
+    margin-top: 6%;
+    margin-bottom: 3.5%;
+    margin-left: 1.5%;
+    padding: 10px;
+    border-radius: 15px;
+
+    
 }
 
-.absoluteZomboid{
-    position: absolute;
-    left: 620px;
-    top: 1380px;
+.contenedorFlex{
+    background-image: linear-gradient(to right bottom, #1d012c, #220637, #290842, #2f0b4d, #360d59, #3d0f65, #441172, #4b137f, #541590, #5e16a1, #6718b2, #7119c4);
+    width: 100%;
+    height: 100%;
+    margin-top: 20px;
+    border-radius:20px ;
+    padding: 10px;
+    display: flex;
+    flex-wrap: nowrap;
+    flex-direction: row;
+    text-align: center;
+    justify-content: space-around;
+    align-content: center;
+    
 }
-.absoluteResident{
-    position: absolute;
-    left: 1200px;
-    top: 1380px;
+
+.claseH2{
+    background-image: radial-gradient(circle, #350066, #3c0079, #43008e, #4900a2, #4e00b8, #5404c5, #5a08d2, #600de0, #6a16e8, #731def, #7d24f7, #862aff);
+    width:fit-content;
+    height: 40%;
+    margin-top: 6%;
+    margin-bottom: 3.5%;
+    margin-left: 1.5%;
+    padding: 10px;
+    border-radius: 25px;
+
 }
-.absoluteCyberpunk{
-    position: absolute;
-    left: 620px;
-    top: 1830px ;
-}
-.absolutePoe{
-    position: absolute;
-    left: 1200px;
-    top: 1830px;
-}
+
+/*CONTENIDO FOOTER*/
 .elFooter{
     background-color:  rgb(63, 17, 105);
     text-decoration: none;
@@ -210,29 +200,51 @@ section div a{
   
 }
 
-footer ul li{
-    list-style-type: none;
-}
+
 .imagenesVectorizadas{
     width: 25px;
     height: 25px;
 }
-.absoluteFooter1{
-    position: absolute;
-    bottom: 0px;
-    left: 600px;
-    
-    
-}
-.absoluteReservados{
-    position: absolute;
-    bottom: 0px;
-    left: 1000px;
  
+footer div div a:hover{
+    color: rgba(0, 203, 203, 1);
 }
-.absoluteCondiciones{
-    position: absolute;
-    bottom: 0px;
-    left: 1500px;
 
+
+
+
+.flexFooter2{
+    background-color: #2f0b4d;
+    margin-top: 5%;
+}
+
+
+
+.hijoFooter{
+    background-color:transparent;
+    font-size: 2rem;
+    width: fit-content;
+    height: fit-content;
+    border-radius: 10px;
+    justify-content: space-evenly;
+    text-align: justify;
+    flex-wrap: wrap;
+
+}
+/*FORMULARIOS*/
+.formulario{
+    color: rgb(0, 203, 203, 1);
+    text-decoration: underline;
+    font-family: 'Kanit', sans-serif;
+    font-weight: 200;
+    font-size: 2rem;
+    margin-top: 100px;
+}
+/*SECCION LINKS*/
+.linksExternos{
+    color: rgb(187, 101, 230, 0.9);
+    font-family: 'Kanit', sans-serif;
+    font-weight: 200;
+    font-size: 2rem;
+    
 }
