--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Bungee&family=Kanit:ital,wght@0,200;1,300;1,400&display=swap");
 * {
   margin: 0;
@@ -64,35 +63,6 @@ header .elHeaderBox {
     header .elHeaderBox div ul li .navColor:hover {
       color: #3a036d; }
 
-/*
-
-.parrafos{
-    color: rgb(249, 249, 250);
-    font-family: $fuente-general;
-    font-weight: map-get($tamaños-fuentes, fuente-400);
-    font-size: 2rem;    
-}
-
-
-.parrafosSection{
-    color: rgb(249, 249, 250);
-    font-family: $fuente-general;
-    font-weight: map-get($tamaños-fuentes, fuente-400);
-    font-size: 2rem;
-    text-align: $text-align-center;    
-}
-.parrafosContactos{
-    color: rgb(249, 249, 250);
-    font-family: $fuente-general;
-    font-weight: map-get($tamaños-fuentes, fuente-400);
-    font-size: 2rem;    
-}
-.parrafosMision{
-    color: rgba(0, 203, 203, 1);
-    height: $alto/2;
-    width: $ancho/1.15;
-
-}*/
 main .claseH2 {
   background-image: radial-gradient(circle, #350066, #3c0079, #43008e, #4900a2, #4e00b8, #5404c5, #5a08d2, #600de0, #6a16e8, #731def, #7d24f7, #862aff);
   width: fit-content;
@@ -102,6 +72,29 @@ main .claseH2 {
   margin-left: 1.5%;
   padding: 10px;
   border-radius: 25px; }
+
+main .parrafoH2 {
+  background-image: linear-gradient(to right bottom, #1d012c, #220637, #290842, #2f0b4d, #360d59, #3d0f65, #441172, #4b137f, #541590, #5e16a1, #6718b2, #7119c4);
+  width: 100%;
+  height: 100%;
+  margin-top: 20px;
+  border-radius: 20px;
+  padding: 10px;
+  display: flex;
+  flex-wrap: nowrap;
+  flex-direction: row;
+  text-align: center;
+  justify-content: space-around;
+  align-content: center;
+  width: 80%;
+  color: #00cbcb;
+  margin-left: 5%;
+  margin-bottom: 12%;
+  font-family: "Kanit", sans-serif;
+  font-weight: 400;
+  font-size: 2.5rem;
+  border-radius: 40px;
+  text-align: start; }
 
 main .subtitulos3 {
   color: #00cbcb;
@@ -175,35 +168,14 @@ main .contenedorFlex {
   height: 50%;
   width: 86.95652%; }
 
-/*
+.subtitulos3Contactos {
+  color: #00cbcb;
+  text-decoration: underline;
+  font-family: "Kanit", sans-serif;
+  font-weight: 400;
+  font-size: 3.5rem;
+  margin-top: 100px; }
 
-.parrafos{
-    color: rgb(249, 249, 250);
-    font-family: $fuente-general;
-    font-weight: map-get($tamaños-fuentes, fuente-400);
-    font-size: 2rem;    
-}
-
-
-.parrafosSection{
-    color: rgb(249, 249, 250);
-    font-family: $fuente-general;
-    font-weight: map-get($tamaños-fuentes, fuente-400);
-    font-size: 2rem;
-    text-align: $text-align-center;    
-}
-.parrafosContactos{
-    color: rgb(249, 249, 250);
-    font-family: $fuente-general;
-    font-weight: map-get($tamaños-fuentes, fuente-400);
-    font-size: 2rem;    
-}
-.parrafosMision{
-    color: rgba(0, 203, 203, 1);
-    height: $alto/2;
-    width: $ancho/1.15;
-
-}*/
 /*SECTION*/
 section .subtitulos3Section {
   color: #00cbcb;
@@ -276,19 +248,35 @@ section .contenedorFlexSection {
     font-family: "Kanit", sans-serif;
     font-weight: 400;
     font-size: 2rem;
-    margin-top: 10px; }
+    margin-top: 10px;
+    background-image: radial-gradient(circle, #4e057e, #520789, #570994, #5a0c9f, #5e0faa, #6213b3, #6716bc, #6b1ac5, #711fce, #7823d7, #7e28e0, #852ce9);
+    width: fit-content;
+    margin-top: 6%;
+    margin-bottom: 3.5%;
+    margin-left: 1.5%;
+    padding: 10px;
+    border-radius: 15px;
+    margin-left: 30%;
+    margin-right: 20%;
+    font-size: 4rem; }
   .contenedorFlexContactos div .parrafosContactos {
     color: #f9f9fa;
     font-family: "Kanit", sans-serif;
     font-weight: 400;
     font-size: 2rem;
-    text-align: center; }
-  .contenedorFlexContactos div .parrafosContactos {
-    color: #f9f9fa;
-    font-family: "Kanit", sans-serif;
-    font-weight: 400;
-    font-size: 2rem;
-    text-align: center; }
+    text-align: center;
+    padding-left: 20%;
+    padding-right: 20%;
+    padding-top: 5%;
+    font-size: large; }
+
+.formulario {
+  color: #00cbcb;
+  text-decoration: underline;
+  font-family: "Kanit", sans-serif;
+  font-weight: 400;
+  font-size: 2rem;
+  margin-top: 100px; }
 
 /*FINAL SECTION CONTACTOS*/
 .flexFooter2 {
@@ -318,33 +306,3 @@ section .contenedorFlexSection {
   font-weight: 400;
   font-size: 2rem;
   margin-top: 100px; }
-
-/*
-
-.parrafos{
-    color: rgb(249, 249, 250);
-    font-family: $fuente-general;
-    font-weight: map-get($tamaños-fuentes, fuente-400);
-    font-size: 2rem;    
-}
-
-
-.parrafosSection{
-    color: rgb(249, 249, 250);
-    font-family: $fuente-general;
-    font-weight: map-get($tamaños-fuentes, fuente-400);
-    font-size: 2rem;
-    text-align: $text-align-center;    
-}
-.parrafosContactos{
-    color: rgb(249, 249, 250);
-    font-family: $fuente-general;
-    font-weight: map-get($tamaños-fuentes, fuente-400);
-    font-size: 2rem;    
-}
-.parrafosMision{
-    color: rgba(0, 203, 203, 1);
-    height: $alto/2;
-    width: $ancho/1.15;
-
-}*/
