cambios finales para merge con master para entregar final

--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -16,6 +16,7 @@ header{
             .navbar-toggler2{
                 padding: 1rem 0.75rem;
                 font-size: 2rem;
+                color: rgba(0, 203, 203, 1) ;
                 line-height: 1;
                 background-color: rgb(148, 0, 185);
                 border: 1px solid rgb(148, 9, 190);
