--- a/css/estilos.css
+++ b/css/estilos.css
@@ -44,6 +44,7 @@ header .elHeaderBox {
   header .elHeaderBox .navbar-toggler2 {
     padding: 1rem 0.75rem;
     font-size: 2rem;
+    color: #00cbcb;
     line-height: 1;
     background-color: #9400b9;
     border: 1px solid #9409be;
@@ -64,21 +65,26 @@ header .elHeaderBox {
       color: #3a036d; }
 
 main .claseH2 {
-  background-image: radial-gradient(circle, #350066, #3c0079, #43008e, #4900a2, #4e00b8, #5404c5, #5a08d2, #600de0, #6a16e8, #731def, #7d24f7, #862aff);
-  width: fit-content;
-  height: 40%;
-  margin-top: 6%;
-  margin-bottom: 3.5%;
-  margin-left: 1.5%;
-  padding: 10px;
-  border-radius: 25px; }
+  width: 99%;
+  height: 15vh;
+  display: flex;
+  align-items: flex-end;
+  justify-content: flex-start;
+  background-image: url(../assets/imagenes/Recomendados.jpg);
+  background-size: cover;
+  background-position: center; }
+  main .claseH2 .estiladoH2 {
+    font-family: "Kanit", sans-serif;
+    font-weight: bold;
+    color: #5800cb;
+    text-shadow: 1px 0 #fff, -1px 0 #fff, 0 1px #fff, 0 -1px #fff, 0.5px 0.5px #fff, -0.5px -0.5px #fff, 0.5px -0.5px #fff, -0.5px 0.5px #fff; }
 
 main .parrafoH2 {
   background-image: linear-gradient(to right bottom, #1d012c, #220637, #290842, #2f0b4d, #360d59, #3d0f65, #441172, #4b137f, #541590, #5e16a1, #6718b2, #7119c4);
   width: 100%;
   height: 100%;
-  margin-top: 20px;
-  border-radius: 20px;
+  margin-top: 3%;
+  border-radius: 80px 20px;
   padding: 10px;
   display: flex;
   flex-wrap: nowrap;
@@ -89,12 +95,12 @@ main .parrafoH2 {
   width: 80%;
   color: #00cbcb;
   margin-left: 5%;
-  margin-bottom: 12%;
+  margin-bottom: 10%;
   font-family: "Kanit", sans-serif;
   font-weight: 400;
   font-size: 2.5rem;
   border-radius: 40px;
-  text-align: start; }
+  text-align: center; }
 
 main .subtitulos3 {
   color: #00cbcb;
@@ -112,14 +118,14 @@ main .boxSubtitulos {
   margin-bottom: 3.5%;
   margin-left: 1.5%;
   padding: 10px;
-  border-radius: 15px; }
+  border-radius: 25px; }
 
 main .contenedorFlex {
   background-image: linear-gradient(to right bottom, #1d012c, #220637, #290842, #2f0b4d, #360d59, #3d0f65, #441172, #4b137f, #541590, #5e16a1, #6718b2, #7119c4);
   width: 100%;
   height: 100%;
-  margin-top: 20px;
-  border-radius: 20px;
+  margin-top: 3%;
+  border-radius: 80px 20px;
   padding: 10px;
   display: flex;
   flex-wrap: nowrap;
@@ -176,6 +182,15 @@ main .contenedorFlex {
   font-size: 3.5rem;
   margin-top: 100px; }
 
+.estiloInputForm {
+  background-image: radial-gradient(circle, #350066, #3c0079, #43008e, #4900a2, #4e00b8, #5404c5, #5a08d2, #600de0, #6a16e8, #731def, #7d24f7, #862aff);
+  width: fit-content;
+  margin-top: 2%;
+  margin-bottom: 1.5%;
+  margin-left: 1.5%;
+  padding: 10px;
+  border-radius: 25px; }
+
 /*SECTION*/
 section .subtitulos3Section {
   color: #00cbcb;
@@ -193,14 +208,14 @@ section .boxSubtitulosSection {
   margin-bottom: 3.5%;
   margin-left: 1.5%;
   padding: 10px;
-  border-radius: 15px; }
+  border-radius: 25px; }
 
 section .contenedorFlexSection {
   background-image: linear-gradient(to right bottom, #1d012c, #220637, #290842, #2f0b4d, #360d59, #3d0f65, #441172, #4b137f, #541590, #5e16a1, #6718b2, #7119c4);
   width: 100%;
   height: 100%;
-  margin-top: 20px;
-  border-radius: 20px;
+  margin-top: 3%;
+  border-radius: 80px 20px;
   padding: 10px;
   display: flex;
   flex-wrap: nowrap;
@@ -228,14 +243,66 @@ section .contenedorFlexSection {
     section .contenedorFlexSection .linksExternosSection:hover {
       color: #00cbcb; }
 
+@media screen and (max-width: 768px) {
+  section .contenedorFlexSection {
+    display: flex;
+    flex-wrap: wrap; }
+    section .contenedorFlexSection .subtitulos4Section {
+      width: 100%;
+      color: #00cbcb;
+      margin-bottom: 10%;
+      font-weight: bold; }
+    section .contenedorFlexSection .parrafosSection {
+      color: white;
+      width: 100%; } }
+
+@media screen and (min-width: 769px) {
+  section .contenedorFlexSection {
+    display: flex;
+    flex-wrap: nowrap; }
+    section .contenedorFlexSection .subtitulos4Section {
+      width: 40%;
+      color: #00cbcb;
+      margin-bottom: 10%;
+      font-weight: bold;
+      align-items: center;
+      justify-content: center;
+      margin-top: 17%; }
+    section .contenedorFlexSection .parrafosSection {
+      color: white;
+      width: 75%; }
+    section .contenedorFlexSection .linksExternosSection {
+      width: 30%;
+      margin-top: 17%; } }
+
+@media screen and (min-width: 1200px) {
+  section .contenedorFlexSection .subtitulos4Section {
+    width: 20%;
+    margin-bottom: 10%;
+    font-weight: bold;
+    margin-top: 8%; }
+  section .contenedorFlexSection .parrafosSection {
+    width: 80%;
+    text-align: center;
+    justify-content: center; }
+  section .contenedorFlexSection .linksExternosSection {
+    width: 20%;
+    margin-top: 8%; } }
+
+@media screen and (min-width: 1400px) {
+  section .contenedorFlexSection .subtitulos4Section {
+    margin-top: 4%; }
+  section .contenedorFlexSection .linksExternosSection {
+    margin-top: 4%; } }
+
 /*FINAL SECTION*/
 /*INICIO SECTION CONTACTOS*/
 .contenedorFlexContactos {
   background-image: linear-gradient(to right bottom, #1d012c, #220637, #290842, #2f0b4d, #360d59, #3d0f65, #441172, #4b137f, #541590, #5e16a1, #6718b2, #7119c4);
   width: 100%;
   height: 100%;
-  margin-top: 20px;
-  border-radius: 20px;
+  margin-top: 3%;
+  border-radius: 80px 20px;
   padding: 10px;
   display: flex;
   flex-wrap: nowrap;
@@ -275,8 +342,7 @@ section .contenedorFlexSection {
   text-decoration: underline;
   font-family: "Kanit", sans-serif;
   font-weight: 400;
-  font-size: 2rem;
-  margin-top: 100px; }
+  font-size: 2rem; }
 
 /*FINAL SECTION CONTACTOS*/
 .flexFooter2 {
@@ -298,11 +364,3 @@ section .contenedorFlexSection {
     font-weight: 400;
     font-size: 2rem;
     text-align: center; }
-
-.formulario {
-  color: #00cbcb;
-  text-decoration: underline;
-  font-family: "Kanit", sans-serif;
-  font-weight: 400;
-  font-size: 2rem;
-  margin-top: 100px; }
