--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -88,7 +88,7 @@ main{
     
 
 }
-
+/*OTROS ESTILADOS PARTICUALRES*/
 .estiloInputForm{
     background-image:map-get($gradientes , h2 );
     width:fit-content;
@@ -98,4 +98,3 @@ main{
     padding: 10px;
     border-radius: 25px;
 }
-
