--- a/css/estilos.css
+++ b/css/estilos.css
@@ -182,6 +182,7 @@ main .contenedorFlex {
   font-size: 3.5rem;
   margin-top: 100px; }
 
+/*OTROS ESTILADOS PARTICUALRES*/
 .estiloInputForm {
   background-image: radial-gradient(circle, #350066, #3c0079, #43008e, #4900a2, #4e00b8, #5404c5, #5a08d2, #600de0, #6a16e8, #731def, #7d24f7, #862aff);
   width: fit-content;
